--- a/Corruption-of-Arcana.html
+++ b/Corruption-of-Arcana.html
@@ -25,7 +25,7 @@
                 <li><a href="#About">About</a></li>
                 <li><a href="#Features">Features</a></li>
                 <li><a href="#Discord">Join Us</a></li>
-                <li><a href="#Contact">Contact</a></li>
+                <li><a href="#CoAContact">Contact</a></li>
             </ul>
         </nav>
     </div>
